--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
-  <!-- Put CSS Link here!-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>CSS Practice</title>
 </head>
 <body>
@@ -44,7 +45,7 @@
     </ul>
   </div>
   <hr>
-  <div class="info-section">
+  <div class."info-section">
     <h3>How do we get get started on combining CSS HTML?</h3>
     <p> The first thing you need to do is create a CSS stylesheet and link to it in your HTML file. Your link should be in the 'head' section of the html in this page and should look something like this:<br>
      <pre>&#60link rel="stylesheet" type="text/css" href="path_to_stylesheet"&#62</pre>
